--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   mask_text_input_formatter: ^2.4.0
   badges: ^3.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
