--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   badges: ^3.1.1
   intl: ^0.18.1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
