--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   badges: ^3.1.1
   intl: ^0.18.1
   qr_flutter: ^4.0.0
+  get: ^4.6.5
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
